# inspirehep-mcp

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  claude_desktop_config.json.example  pyproject.toml  server.py
.github/workflows/: lint.yml  pull-request.yml  push-main.yml  test.yml
tests/: example_test.py
